feat/se agregan los endpoints a scalar
